<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_black"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/connections"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/connections_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:orientation="vertical" />

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:textSize="11sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
                <Button
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="11sp"
                    android:layout_marginEnd="10dp"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_1"
                    android:textSize="11sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="-1dp"
            android:layout_weight="1"
            android:background="@drawable/border_black"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/baud_rate" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_baud_rate"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/data_bits" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_data_bits"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/stop_bits" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_stop_bits"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/parity" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_parity"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/ip" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_ip"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/apply_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/apply" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_weight="1.5"
        android:background="@color/black"
        android:id="@+id/console_scroll"
    >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/console"
            android:orientation="vertical"
        />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>